# limit-alloc

./: Cargo.toml  README.md
examples/: huge_vec.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: alloc_dealloc.rs
src/: lib.rs
